--- a/UserDoc.html
+++ b/UserDoc.html
@@ -20,4 +20,5 @@
 <ul>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5a0dfc38fd1cc16a">​How to get composition working on ATI GPUs</a></li>
 </ul>
