--- a/UserDoc.html
+++ b/UserDoc.html
@@ -10,7 +10,7 @@
 </ul>
 <p>Advanced topics:</p>
 <ul>
-<li>Using Qubes firewall</li>
+<li><a href="/wiki/wiki/QubesFirewall">Using Qubes firewall</a></li>
 <li>Creating custom NetVMs</li>
 <li>Creating custom ProxyVMs</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
