--- a/SourceCode.html
+++ b/SourceCode.html
@@ -9,5 +9,5 @@
 <p>To clone a repository:</p>
 <pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream/&lt;repo_name&gt;.git &lt;repo_name&gt;</code></pre>
 <p>e.g.:</p>
-<pre class="wiki"><code>git clone git://qubes-os.org/mainstream/core.git core</code></pre>
+<pre class="wiki"><code>git clone git://git.qubes-os.org/mainstream/core.git core</code></pre>
 <p>Currently the preferred way of contributing to the project is by sending a patch via the project's mailing list (<code>git format-patch</code>).</p>
