--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -64,6 +64,9 @@
 <pre class="wiki"><code>sudo bash
 chkconfig qubes_setupdvm on</code></pre></li>
 </ul>
+<ul>
+<li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
