--- a/WikiStart.html
+++ b/WikiStart.html
@@ -9,6 +9,7 @@
 <h2 id="ForDevelopers">For Developers</h2>
 <ul>
 <li><a href="/wiki/wiki/SystemDoc">Qubes Developer Documentation</a></li>
+<li><a href="/wiki/wiki/IdeasIncubator">Ideas Incubator?</a></li>
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
 </ul>
