--- a/Qfileexchgd.html
+++ b/Qfileexchgd.html
@@ -1,3 +1,5 @@
+<h1 id="ThismechanismisobsoleteasofQubesBeta1"><strong>This mechanism is obsolete as of Qubes Beta 1!</strong></h1>
+<p>Please see this <a href="/wiki/wiki/Qfilecopy">page</a> instead.</p>
 <h1 id="qfilexchgdtheQubesfileexchangedaemon">qfilexchgd, the Qubes file exchange daemon</h1>
 <h2 id="Overview">Overview</h2>
 <p><em>qfilexchgd</em> is a dom0 daemon responsible for managing exchange of block devices (&quot;virtual pendrives&quot;) between VMs. It is used for</p>
