--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -54,12 +54,6 @@
 <li>It might take up to 1 minute after you log in for the NetVM's network icon to appear in the tray -- be patient!</li>
 </ul>
 <ul>
-<li>Virtualized tray icons might look incorrectly directly for some apps. This problem seems to vanish whenever the app refreshes the icon.</li>
-</ul>
-<ul>
-<li>If using a wired connection in netvm, it might not come up properly after suspend/resume. One may need to manually do <code> ifconfig eth0 down; ifconfig eth0 up</code> in netvm after resume.</li>
-</ul>
-<ul>
 <li>Under some circumstances, when you choose &quot;Use All Space&quot; during installation, the installer will not replace your boot partition but will create another one.</li>
 </ul>
 <ul>
@@ -72,6 +66,12 @@ chkconfig qubes_setupdvm on</code></pre></li>
 </ul>
 <ul>
 <li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
+</ul>
+<ul>
+<li><del>Virtualized tray icons might look incorrectly directly for some apps. This problem seems to vanish whenever the app refreshes the icon.</del> (Solved after updating to qubes-gui-dom0 1.2.11)</li>
+</ul>
+<ul>
+<li><del>If using a wired connection in netvm, it might not come up properly after suspend/resume. One may need to manually do <code> ifconfig eth0 down; ifconfig eth0 up</code> in netvm after resume.</del> (Solved after updating to qubes-core-dom0 1.5.26)</li>
 </ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
