--- a/SoftwareUpdateDom0.html
+++ b/SoftwareUpdateDom0.html
@@ -13,7 +13,7 @@
 <pre class="wiki"><code>$ sudo bash
 # qvm-dom0-networking up
 # yum update</code></pre>
-<p>Note that by default there is only one repository enabled: this is qubes-dom0-current.you</p>
+<p>Note that by default there is only one repository enabled: <code></code><code>qubes-dom0-current</code><code></code>.</p>
 <p>When finished, detach Dom0 from the network:</p>
 <pre class="wiki"><code># qvm-dom0-networking down</code></pre>
 <p>In the future we will modify this update procedure so that it won't require attaching networking to Dom0. Most likely we will use a moderately-trusted system service VM to perform the download of the update rpm via network, and later copy this file to Dom0 using our secure file copy mechanism. Dom0 will then verify the signature on the RPM, and assuming it was ok, will install the rpm.</p>
