--- a/WikiStart.html
+++ b/WikiStart.html
@@ -27,8 +27,7 @@
 </ul>
 <p>To post to a group you don't need to subscribe, just send a message to the group's email address. You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
-<h3 id="Coredevelopers">Core developers</h3>
-<p>(In the order of joining the project)</p>
+<h3 id="ArchitectsCoreDevelopers">Architects &amp; Core Developers</h3>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab dot com&gt; - architecture &amp; project management</li>
 </ul>
@@ -36,10 +35,15 @@
 <li>Rafal Wojtczuk &lt;rafal at invisiblethingslab dot com&gt; - architecture &amp; system-level stuff</li>
 </ul>
 <ul>
-<li>Tomasz Sterna &lt;tomek at xiaoka dot com&gt; - installer &amp; gui</li>
+<li>Marek Marczykowski &lt;marmarek at mimuw dot edu dot pl&gt; - core, and pretty much everything these days :)</li>
 </ul>
+<h3 id="Contributors">Contributors</h3>
 <ul>
-<li>Marek Marczykowski &lt;marmarek at mimuw dot edu dot pl&gt; - core</li>
+<li>TBD</li>
+</ul>
+<h3 id="Pastdevelopers">Past developers</h3>
+<ul>
+<li>Tomasz Sterna &lt;tomek at xiaoka dot com&gt; - installer &amp; gui</li>
 </ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
