--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -12,6 +12,9 @@
 <li><a href="/wiki/wiki/Qfilecopy">Inter-domain file coping</a></li>
 </ul>
 <ul>
+<li><a href="/wiki/wiki/Qrexec">Command execution in VM (and Qubes RPC)</a></li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/Qmemman">Dynamic memory management in Qubes</a></li>
 </ul>
 <ul>
