--- a/Qrexec.html
+++ b/Qrexec.html
@@ -13,7 +13,7 @@
 <p>Also, note that bare qrexec provides VM&lt;-&gt;dom0 connectivity, but the command execution is always initiated by dom0. There are cases when VM needs to invoke and send data to a command in dom0 (e.g. to pass information on newly installed .desktop files). Thus, the framework allows dom0 to be the rpc target as well.</p>
 <p>Thanks to the framework, RPC programs are very simple - both rpc client and server just use their stdin/stdout to pass data. The framework does all the inner work to connect these file descriptors to each other via <em>qrexec_daemon</em> and <em>qrexec_agent</em>. Additionally, disposable VMs are tightly integrated - rpc to a disposableVM is identical to rpc to a normal domain, all one needs is to pass &quot;$dispvm&quot; as the remote domain name.</p>
 <h2 id="QubesRPCadministration">Qubes RPC administration</h2>
-<p>In dom0, there is a bunch of files in <em>/etc/qubes_rpc/policy</em> directory, whose names describe the available rpc actions; their content is the rpc access database. Currently defined actions are:</p>
+<p>In dom0, there is a bunch of files in <em>/etc/qubes_rpc/policy</em> directory, whose names describe the available rpc actions; their content is the rpc access policy database. Currently defined actions are:</p>
 <ul>
 <li>qubes.Filecopy</li>
 <li>qubes.OpenInVM</li>
@@ -23,7 +23,7 @@
 </ul>
 <p>These files contain lines with the following format:</p>
 <p>srcvm destvm (allow|deny|ask)[,user=user_to_run_as][,target=VM_to_redirect_to]</p>
-<p>You can specify srcvm and destvm by name, or by one of &quot;$anyvm&quot;, &quot;$dispvm&quot;, &quot;dom0&quot; reserved keywords. Whenever a rpc request for action X is received, the first line in /etc/qubes_rpc/policy/X that match srcvm/destvm is consulted to determine whether to allow rpc, what user account the program should run in target VM under, and what VM to redirect the execution to.</p>
+<p>You can specify srcvm and destvm by name, or by one of &quot;$anyvm&quot;, &quot;$dispvm&quot;, &quot;dom0&quot; reserved keywords (note string &quot;dom0&quot; does not match the $anyvm pattern; all other names do). Whenever a rpc request for action X is received, the first line in /etc/qubes_rpc/policy/X that match srcvm/destvm is consulted to determine whether to allow rpc, what user account the program should run in target VM under, and what VM to redirect the execution to. If the policy file does not exits, user is prompted to create one; if still there is no policy file after prompting, the action is denied.</p>
 <p>On target VM, the <em>/etc/qubes_rpc/RPC_ACTION_NAME</em> must exist, containing the file name of the program that will be invoked.</p>
 <p>On src VM, one should invoke the client via</p>
 <p><em>/usr/lib/qubes/qrexec_client_vm target_vm_name RPC_ACTION_NAME rpc_client_path client arguments</em></p>
@@ -40,7 +40,7 @@ exec cat &gt;&amp;$SAVED_FD_1 # print result to the original stdout, not to the 
 read arg1 arg2 # read from stdin, which is received from the rpc client
 echo $(($arg1+$arg2)) # print to stdout - so, pass to the rpc client</code></pre></li>
 <li><p>policy file in dom0 (<em>/etc/qubes_rpc/policy/test.Add</em> )</p>
-<pre class="wiki"><code>anyvm anyvm ask</code></pre></li>
+<pre class="wiki"><code>$anyvm $anyvm ask</code></pre></li>
 <li><p>server path definition ( <em>/etc/qubes_rpc/test.Add</em>)</p>
 <pre class="wiki"><code>/usr/bin/our_test_add_server</code></pre></li>
 <li><p>invoke rpc via</p>
@@ -51,6 +51,7 @@ echo $(($arg1+$arg2)) # print to stdout - so, pass to the rpc client</code></pre
 <p>When an user in VM executes the <em>/usr/lib/qubes/qrexec_client_vm</em> utility, the following steps are taken:</p>
 <ul>
 <li><em>qrexec_client_vm</em> connects to <em>qrexec_agent's</em> <em>/var/run/qubes/qrexec_agent_fdpass</em> unix socket 3 times. Reads 4 bytes from each of them, which is the fd number of the accepted socket in agent. These 3 integers, in text, concatenated, form &quot;connection identifier&quot; (CID)</li>
+<li><em>qrexec_client_vm</em> executes the rpc client, passing the above mentioned unix sockets as process stdin/stdout, and optionally stderr (if the PASS_LOCAL_STDERR env variable is set)</li>
 <li><em>qrexec_client_vm</em> writes to <em>/var/run/qubes/qrexec_agent</em> fifo a blob, consisting of target vmname, rpc action, and CID</li>
 <li><em>qrexec_agent</em> passes the blob to <em>qrexec_daemon</em>, via MSG_AGENT_TO_SERVER_TRIGGER_CONNECT_EXISTING message over vchan</li>
 <li><em>qrexec_daemon</em> executes <em>qrexec_policy</em>, passing target vmname, rpc action, and CID as cmdline arguments</li>
