--- a/Qfilecopy.html
+++ b/Qfilecopy.html
@@ -10,39 +10,6 @@
 <li>performance - dom0 has to prepare and attach/detach block devices, which is slow because of hotplug scripts involvement.</li>
 <li>security - VM kernel parses partition table and filesystem metadata from the block device; they are controlled by (potentially untrusted) sender VM.</li>
 </ul>
-<p>The current solution is based on the &quot;qrexec&quot; mechanism. Dom0 can call <em>qrexec_client</em> program, which will execute a given program in a given VM, passing stdin/stdout/stderr/exit code over vchan connection; possibly attaching the remote stdin/stdout to a local program. In the latter case, the syntax is <em>qrexec_client peer_vm command_in_vm -l command_in_dom0</em></p>
-<p>In order to support qrexec, there are two permanent processes: <em>qrexec-daemon</em> in dom0 and <em>qrexec-agent</em> in VM, connected over vchan. These processes are started when a domain is created. All data exchanged by pairs of processes created by <em>qrexec_client DestVM command_in_vm</em> pass via the vchan connecting qrexec-daemon and qrexec-agent.</p>
-<p>The <em>qvm-run</em> tool has been adapted to use qrexec functionality. See <em>qvm-run --help</em> for syntax.</p>
-<p>Notably, qrexec-agent possess ability to signal its qrexec-daemon peer to execute a predefined command. This way, VM-side code can initiate setup of <em>vm process &lt;-&gt; vchan &lt;-&gt; dom0 process</em> structure. As the range of dom0 commands will be predefined, there is no &quot;arbitrary code execution&quot; vulnerability here.</p>
-<p>In Qubes Beta1, we have reimplemented interVM file copy using qrexec, which addresses the abovementioned disadvantages.</p>
-<p>Note, the qrexec mechanism works over vchan, and vchan is a channel between VM and dom0 (not between two VMs). We could imagine vchan extension, in which instead of using facilities available for dom0 only (like <em>xc_map_foreign_range</em>), the channel would be set up over granted pages, between two AppVMs. Reimplementing vchan this way is nontrivial. Also, it creates some security design questions; currently, everything is mediated via dom0, which has the ability to allow/deny communication, possibly asking user via dialog popups.</p>
-<h2 id="Regularfilecopy">Regular file copy</h2>
-<p>&quot;Regular&quot; file is implemented as follows:</p>
-<ul>
-<li>in srcVM, qvm-copy-to-vm utility
-<ul>
-<li>stores the information on the files_to_be_copied to <code>~/.filecopyspool</code> directory</li>
-<li>tells <em>qrexec-agent</em> (by writing to its command fifo) to send <code>EXECUTE_FILE_COPY</code> command to qrexec-daemon</li>
-</ul></li>
-<li><em>qrexec-daemon</em> sees <code>EXECUTE_FILE_COPY</code> command, executes (predefined) <br /> <em>qrexec_client srcVM qfile-agent -l qfile-daemon</em></li>
-<li>qfile-agent inspects <code>~/.filecopyspool</code>, sees the description about the file copy request. <em>qfile-agent</em> walks the directory tree, sends destination vmname, sends file metadata and data, then exits</li>
-<li>qfile-daemon gets the first 32 characters from stdin (copy destination vmname), then executes (execve, really turn into new process) <br /> <em>qrexec_client dstVM qfile-unpacker</em> <br /> At this point, two <em>qrexec_client</em> processes running in dom0 just pass data between srcVM and dstVM. When the one connected to srcVM sees incoming EOF, it just closes input to the other qrexec_client.</li>
-</ul>
-<p><a href="/wiki/chrome/site/../../../site/filecopy.png"><img src="/wiki/chrome/site/../../../site/filecopy.png" title="filecopy.png" alt="filecopy.png" /></a></p>
-<p>Note that <em>qfile-unpacker</em> must be coded securely, as it processes potentially untrusted data format. Particularly, we do not want to use external tar or cpio and be prone to all vulnerabilities in them; we want a simplified, small utility, that handles only directory/file/symlink file type, permissions, mtime/atime, and assume user/user ownership. In the current implementation, the code that actually parses the data from srcVM has ca 100 lines of code and executes chrooted to the destination directory. The latter is hardcoded to <code>~user/incoming/srcVM</code>; because of chroot, there is no possibility to alter files outside of this directory.</p>
-<h2 id="DispVMfilecopy">DispVM file copy</h2>
-<p>DispVM copy is implemented as follows:</p>
-<ul>
-<li>in source_VM, <em>qvm-open-in-dvm</em> utility
-<ul>
-<li>stores the information on file_to_be_edited in <code>~/.dvmspool</code> directory</li>
-<li>tells <em>qrexec-agent</em> (by writing to qrexec-agent command fifo) to send <code>EXECUTE_FILE_COPY_FOR_DISPVM</code> command to <em>qrexec-daemon</em></li>
-</ul></li>
-<li>qrexec-daemon sees <code>EXECUTE_FILE_COPY_FOR_DISPVM</code> command, executes <br /> <em>qrexec_client srcVM qfile-agent-dvm -l qfile-daemon-dvm</em></li>
-<li><em>qfile-agent-dvm</em> inspects <code>~/.dvmspool</code>, sees the description about file_to_be_edited, sends data about it to its peer, closes stdout</li>
-<li><em>qfile-daemon-dvm</em> creates DispVM, then forks <br /> <em>qrexec_client DispVM dvm_file_editor</em> <br /> at this point, two qrexec_client processes running in dom0 just pass data between srcVM and DispVM. <em>qfile-daemon-dvm</em> just waits for its child qrexec_client process termination.</li>
-<li><em>dvm_file_editor</em> gets file contents (end of transfer signalled by EOF), spawns mime handler; if the file has changed, sends modified file to its stdout, closes stdout</li>
-<li>the response from <em>dvm_file_editor</em> (terminated by EOF) is passed (via two qrexec_client processes in dom0) to <em>qfile-agent-dvm</em>. When <em>qfile-daemon-dvm</em> sees its child qrexec_client has exited (because of EOFs in both directions), it kills DispVM.</li>
-<li><em>qfile-agent-dvm</em> retrieves response (terminated by EOF), if nonempty, it updates the edited file.</li>
-</ul>
-<p><a href="/wiki/chrome/site/../../../site/dvmcopy.png"><img src="/wiki/chrome/site/../../../site/dvmcopy.png" title="dvmcopy.png" alt="dvmcopy.png" /></a></p>
+<p>In Qubes Beta1, we have reimplemented interVM file copy using qrexec, which addresses the abovementioned disadvantages. In Qubes Beta2, even more generic solution (qubes rpc) is used. See the developer docs on qrexec and qubes rpc. In a nutshell, the file sender and the file receiver just read/write from stdin/stdout, and the qubes rpc layer passes data properly - so, no block devices are used.</p>
+<p>The rpc action for regular file copy is <em>qubes.Filecopy</em>, the rpc client is named <em>qfile-agent</em>, the rpc server is named <em>qfile-unpacker</em>. For DispVM copy, the rpc action is <em>qubes.OpenInVM</em>, the rpc client is named <em>qopen-in-vm</em>, rpc server is named <em>vm-file-editor</em>. Note that the qubes.OpenInVM action can be done on a normal AppVM, too.</p>
+<p>Being a rpc server, <em>qfile-unpacker</em> must be coded securely, as it processes potentially untrusted data format. Particularly, we do not want to use external tar or cpio and be prone to all vulnerabilities in them; we want a simplified, small utility, that handles only directory/file/symlink file type, permissions, mtime/atime, and assume user/user ownership. In the current implementation, the code that actually parses the data from srcVM has ca 100 lines of code and executes chrooted to the destination directory. The latter is hardcoded to <code>~user/incoming/srcVM</code>; because of chroot, there is no possibility to alter files outside of this directory.</p>
