--- a/SoftwareUpdateDom0.html
+++ b/SoftwareUpdateDom0.html
@@ -7,7 +7,9 @@
 <li>Correcting non-security related bugs (e.g. new buttons for qubes manager)</li>
 <li>Adding new features (e.g. GUI backup tool)</li>
 </ul>
-<h2 id="Howtodothat">How to do that?</h2>
+<h2 id="HowtodothatinBeta2">How to do that? (in Beta 2)</h2>
+<p>TODO</p>
+<h2 id="HowtodothatinBeta1">How to do that? (in Beta 1)</h2>
 <p>Currently Dom0 update procedure requires command line -- in the future we will make it available from the GUI manager.</p>
 <p>First, start the console in Dom0, and switch to root. Then attach Dom0 to the netvm, and run yum update:</p>
 <pre class="wiki"><code>$ sudo bash
