--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -26,6 +26,9 @@
 <ul>
 <li><a href="/wiki/wiki/TemplateImplementation">Implementation of template sharing and updating</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/Dom0SecureUpdate%3A">Dom0 secure update mechanism</a></li>
+</ul>
 <p>Build instructions:</p>
 <ul>
 <li>Building Qubes core and gui packages: see this <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​message</a></li>
