--- a/TemplateImplementation.html
+++ b/TemplateImplementation.html
@@ -41,7 +41,20 @@
 <h3 id="Changestotemplatefilesystem">Changes to template filesystem</h3>
 <p>In order for the full potential of the snapshot device to be realized, every change in root.img must save the original version of the modified block in root-cow.img. This is achieved by a snapshot-origin device.</p>
 <p>When TemplateVM is started, it receives the snapshot-origin device connected as a root device (in read-write mode). Therefore, every change to this device is immediately saved in root.img - but remains invisible to the AppVM, which uses the snapshot.</p>
-<p>When TemplateVM is stopped, the xen script removes root-cow.img and creates a new one (using the qvm-template-commit tool). The snapshot device will remain untouched due to the loop device, which uses an actual file on the disk (by inode, not by name). Linux kernel frees the old root-cow.img files as soon as they are unused by all snapshot devices (to be exact, loop devices). The new root-cow.img file will get a new inode number, and so new AppVMs will get new snapshot devices (with different names).</p>
+<p>When TemplateVM is stopped, the xen script moves root-cow.img to root-cow.img.old and creates a new one (using the qvm-template-commit tool). The snapshot device will remain untouched due to the loop device, which uses an actual file on the disk (by inode, not by name). Linux kernel frees the old root-cow.img files as soon as they are unused by all snapshot devices (to be exact, loop devices). The new root-cow.img file will get a new inode number, and so new AppVMs will get new snapshot devices (with different names).</p>
+<h3 id="Rollbacktemplatechanges">Rollback template changes</h3>
+<p>There is possibility to rollback last template changes. Saved root-cow.img.old contains all changes made during last TemplateVM run. Rolling back changes is done by reverting this &quot;binary patch&quot;.</p>
+<p>This is done using snapshot-merge device-mapper target (available from 2.6.34 kernel). It requires that no other snapshot device uses underlying block devices (root.img, root-cow.img via loop device). Because of this all AppVMs based on this template must be halted during this operation.</p>
+<p>Steps performed by <strong>qvm-revert-template-changes</strong>:</p>
+<ol>
+<li>Ensure that no other VMs uses this template.</li>
+<li>Prepare snapshot device with <strong><em>root-cow.img.old</em></strong> instead of <em>root-cow.img</em> (<em>/etc/xen/scripts/block-snapshot prepare</em>).</li>
+<li>Replace <em>snapshot</em> device-mapper target with <em>snapshot-merge</em>, other parameters (chunk size etc) remains untouched. Now kernel starts merging changes stored in <em>root-cow.img.old</em> into <em>root.img</em>, but d-m device can be used normally.</li>
+<li>Waits for merge completed: <em>dmsetup status</em> shows used snapshot blocks - it should be equal to metadata size when completed.</li>
+<li>Replace <em>snapshot-merge</em> d-m target back to <em>snapshot</em>.</li>
+<li>Cleanup snapshot device (in nobody uses it it the moment).</li>
+<li>Move <em>root-cow.img.old</em> to <em>root-cow.img</em> (overriding existing file).</li>
+</ol>
 <h2 id="SnapshotdeviceinAppVM">Snapshot device in AppVM</h2>
 <p>Root device is exposed to AppVM in read-only mode. AppVM can write only in:</p>
 <ul>
