--- a/TemplateImplementation.html
+++ b/TemplateImplementation.html
@@ -67,3 +67,6 @@
 <li>swap partition</li>
 </ol>
 <p>Inside of an AppVM, the root device is wrapped by the snapshot in the first partition of volatile.img. Therefore, the AppVM can write anything to its filesystem - however, such changes will be discarded after a restart.</p>
+<h2 id="StandaloneVM">StandaloneVM</h2>
+<p>Standalone VM enables user to modify root filesystem persistently. It can be created using <em>--standalone</em> switch to <em>qvm-create</em>.</p>
+<p>It is implemented just like TemplateVM (has own root.img connected as R/W device), but no other VMs can be based on it.</p>
