--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -3,6 +3,9 @@
 <li>Qubes OS Architecture v0.3 <a href="http://www.qubes-os.org/files/doc/arch-spec-0.3.pdf">​(pdf)</a></li>
 </ul>
 <ul>
+<li><a href="/wiki/wiki/Trusted_parts">Trusted system components</a></li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/GUIdocs">Qubes GUI virtualization protocol</a></li>
 </ul>
 <ul>
