Trusted_parts changed

--- a/Trusted_parts.html
+++ b/Trusted_parts.html
@@ -13,6 +13,7 @@
 <li>network PV frontends (exposed to potentially compromised netvm) and backends</li>
 <li>block backend implemented in dom0 kernel</li>
 <li>integrity of Fedora packages (meaning, they are not trojaned)</li>
+<li>rpm and yum in dom0 must correctly verify signatures of the packages</li>
 </ul>
 <p>At the current project stage, we cannot afford to spend time to improve them - all we can do is to limit the number and extent of these components.</p>
 <h2 id="TrustedQubes-specificcomponents">Trusted Qubes-specific components</h2>
