--- a/Trusted_parts.html
+++ b/Trusted_parts.html
@@ -11,9 +11,11 @@
 <li>Xen hypervisor</li>
 <li>xenstore</li>
 <li>network PV frontends (exposed to potentially compromised netvm) and backends</li>
+<li>VMs networking stack. Note that in order to take control over VM without its cooperation (e.g. enticing user to visit a malicious web page) the attacker would have to compromise two firewalls first. Also, dom0 has no network connectivity, thus it is not exposed.</li>
 <li>block backend implemented in dom0 kernel</li>
 <li>integrity of Fedora packages (meaning, they are not trojaned)</li>
 <li>rpm and yum (both in dom0 and in VMs) must correctly verify signatures of the packages</li>
+<li>terminal emulators and file editors used in dom0 to view VM-influenced logs (although somehow exotic, in the past there were vulnerabilities in terminal emulators allowing for arbitrary code execution by just displaying malicious content on the terminal).</li>
 </ul>
 <p>At the current project stage, we cannot afford to spend time to improve them - all we can do is to limit the number and extent of these components.</p>
 <h2 id="TrustedQubes-specificcomponents">Trusted Qubes-specific components</h2>
