--- a/SoftwareUpdateDom0.html
+++ b/SoftwareUpdateDom0.html
@@ -8,7 +8,12 @@
 <li>Adding new features (e.g. GUI backup tool)</li>
 </ul>
 <h2 id="HowtodothatinBeta2">How to do that? (in Beta 2)</h2>
-<p>TODO</p>
+<p>Start a console in Dom0 and then run one of the following command:</p>
+<p>1) To check and install updates for Dom0 software:</p>
+<pre class="wiki"><code>$ sudo qvm-dom0-updates</code></pre>
+<p>2) To install additional packages in Dom0 (usually not recommended):</p>
+<pre class="wiki"><code>$ sudo qvm-dom0-updates anti-evil-maid</code></pre>
+<p>You can also pass --enablerepo= option in order to enable optional repositories (see yum configuration in Dom0). This is only for advanced users who really understand what they are doing.</p>
 <h2 id="HowtodothatinBeta1">How to do that? (in Beta 1)</h2>
 <p>Currently Dom0 update procedure requires command line -- in the future we will make it available from the GUI manager.</p>
 <p>First, start the console in Dom0, and switch to root. Then attach Dom0 to the netvm, and run yum update:</p>
