--- a/Trusted_parts.html
+++ b/Trusted_parts.html
@@ -11,7 +11,12 @@
 <li>Xen hypervisor</li>
 <li>xenstore</li>
 <li>network PV frontends (exposed to potentially compromised netvm) and backends</li>
-<li>VMs networking stack. Note that in order to take control over VM without its cooperation (e.g. enticing user to visit a malicious web page) the attacker would have to compromise two firewalls first. Also, dom0 has no network connectivity, thus it is not exposed.</li>
+<li>VMs networking stack. Some notes:
+<ol>
+<li>Only NetVM uses real hardware drivers; the rest use just the simple and small PV frontend. Thus, attacker would need a code execution bug in core TCP/IP to reach AppVM.</li>
+<li>In order to take control via network over AppVM without its cooperation (e.g. enticing user to visit a malicious web page) the attacker would have to compromise two firewalls first.</li>
+<li>Dom0 has no network connectivity, thus it is not exposed.</li>
+</ol></li>
 <li>block backend implemented in dom0 kernel</li>
 <li>integrity of Fedora packages (meaning, they are not trojaned)</li>
 <li>rpm and yum (both in dom0 and in VMs) must correctly verify signatures of the packages</li>
