--- a/WikiStart.html
+++ b/WikiStart.html
@@ -1,6 +1,7 @@
 <h1 id="WelcometotheQubesWiki">Welcome to the Qubes Wiki</h1>
 <h2 id="ForUsers">For Users</h2>
 <ul>
+<li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 <li><a href="/wiki/wiki/UserDoc">User Guide</a></li>
