--- a/Trusted_parts.html
+++ b/Trusted_parts.html
@@ -1,35 +1,33 @@
-<h1 id="Security-criticalelementsofQubesOS">Security-critical elements of Qubes OS</h1>
-<h2 id="Summary">Summary</h2>
-<p>As stated in the architecture document, the threat model for Qubes include:</p>
+<h1 id="Security-CriticalCodeinQubesOS">Security-Critical Code in Qubes OS</h1>
+<p>Below is a list of security-critical (AKA trusted) code in Qubes OS. A successful attack against any of those might allow to compromise the Qubes OS security. This code can be thought of as of a Trusted Computing Base (TCB) of Qubes OS. The goal of the project has been to minimize the amount of this trusted code to an absolute minimum. The size of the current TCB is of an order of hundreds thousands of lines of C code, which is several orders of magnitude less than in other OSes, such as Windows, Linux or Mac, where it is of orders of tens of millions of lines of C code.</p>
+<p>For more information about the security goals of Qubes OS, see <a href="/wiki/wiki/SecurityGoals">this page</a>.</p>
+<h2 id="Security-CriticalQubes-SpecificComponents">Security-Critical Qubes-Specific Components</h2>
+<p>Below is a code produced by the Qubes project that is security-critical.</p>
 <ul>
-<li>a compromised VM</li>
-<li>compromised Internet connectivity (e.g. rogue ISP)</li>
+<li>Dom0-side of the libvchan library</li>
+<li>Dom0-side of the GUI virtualization code (<em>qubes-guid</em>)</li>
+<li>Dom0-side of the sound virtualization code (<em>pacat-simple-vchan</em>)</li>
+<li>Dom0-side in qrexec-related code (<em>qrexec_daemon</em>)</li>
+<li>VM memory manager (<em>qmemman</em>) that runs in Dom0</li>
+<li>select Qubes RPC servers that run in Dom0: qubes.<a href="/wiki/wiki/ReceiveUpdates">ReceiveUpdates?</a> and qubes.<a href="/wiki/wiki/SyncAppMenus">SyncAppMenus?</a></li>
+<li>The qubes.Filecopy RPC server that runs in a VM -- this one is critical because it might allow one VM to compromise another one if user allows file copy operation to be performed between them</li>
 </ul>
-<p>Qubes's goal is to contain an attacker within an already compromised VM. There are a number of system components that are exposed to interaction with untrusted entities, and their compromise is fatal to Qubes security.</p>
-<h2 id="Trustednon-Qubes-specificcomponents">Trusted non-Qubes-specific components</h2>
+<h2 id="Security-Critical3rd-PartyComponents">Security-Critical 3rd-Party Components</h2>
+<p>These are the components that we haven't written or designed ourselves, yet we still rely on them. At the current project stage, we cannot afford to spend time to thoroughly review and audit them, so we just more or less &quot;blindly&quot; trust they are secure.</p>
 <ul>
 <li>Xen hypervisor</li>
-<li>xenstore</li>
-<li>network PV frontends (exposed to potentially compromised netvm) and backends</li>
-<li>VMs networking stack. Some notes:
-<ol>
-<li>Only NetVM uses real hardware drivers; the rest use just the simple and small PV frontend. Thus, attacker would need a code execution bug in core TCP/IP to reach AppVM.</li>
-<li>In order to take control via network over AppVM without its cooperation (e.g. enticing user to visit a malicious web page) the attacker would have to compromise two firewalls first.</li>
-<li>Dom0 has no network connectivity, thus it is not exposed.</li>
-</ol></li>
-<li>block backend implemented in dom0 kernel</li>
-<li>integrity of Fedora packages (meaning, they are not trojaned)</li>
-<li>rpm and yum (both in dom0 and in VMs) must correctly verify signatures of the packages</li>
-<li>terminal emulators and file editors used in dom0 to view VM-influenced logs (although somehow exotic, in the past there were vulnerabilities in terminal emulators allowing for arbitrary code execution by just displaying malicious content on the terminal).</li>
+<li>The Xen's xenstore backend running in Dom0</li>
+<li>The Xen's block backend running in Dom0 kernel</li>
+<li>The rpm program used in Dom0 for verifying Dom0 updates' signatures</li>
+<li>Somehow optional: log viewing software in dom0 that parses VM-influenced logs</li>
 </ul>
-<p>At the current project stage, we cannot afford to spend time to improve them - all we can do is to limit the number and extent of these components.</p>
-<h2 id="TrustedQubes-specificcomponents">Trusted Qubes-specific components</h2>
+<p>Additionally when we consider attacks that originate through a compromised network domain and target the VMs connected to it. Those attacks do not apply to domains connected to other network domains (Qubes allows more than one network domains), or those with networking disabled (Dom0 is not connected to any network by default).</p>
 <ul>
-<li>dom0-side libvchan library</li>
-<li>GUI virtualization code in dom0 (<em>qubes-guid</em>)</li>
-<li>sound virtualization code in dom0 (<em>pacat-simple-vchan</em>); note at the current state, it parses no data from VM (just passes raw audio frames to pulseaudio), so it should be safe</li>
-<li>VM memory manager (<em>qmemman</em>)</li>
-<li>qrexec-related code in dom0 (<em>qrexec_daemon</em>)</li>
-<li>some Qubes rpc servers. The servers implementing qubes.Filecopy, qubes.<a href="/wiki/wiki/ReceiveUpdates">ReceiveUpdates?</a> and qubes.<a href="/wiki/wiki/SyncAppMenus">SyncAppMenus?</a> must be bullet-proof. In case of qubes.OpenInVM and qubes.VMShell, their incarnation require explicit consent from the user, and such consent basically grants control over the target VM to the source VM, thus they are not critical.</li>
+<li>Xen network PV frontends</li>
+<li>VM's core networking stacks (core TCP/IP code)</li>
 </ul>
-<p>It is the priority of the project to design the system so that the amount of this code is as limited as possible, and to code them securely.</p>
+<h2 id="BuggyCodevs.Back-dooredCodeDistinction">Buggy Code vs. Back-doored Code Distinction</h2>
+<p>There is an important distinction between the buggy code and maliciously trojaned code. We could have the most secure architecture and the most bulletproof TCB that perfectly isolates all domains from each other, but it still would be pretty useless if all the code used within domains, e.g. the actual email clients, word processors, etc, was somehow trojaned. In that case only network-isolated domains could be somehow trusted, while all others could be not.</p>
+<p>The above means that we must trust at least some of the vendors (not all, of course, but at least those few that provide the apps that we use in the most critical domains). In practice in Qubes OS we trust the software provided by Fedora project. This software is signed by Fedora distribution keys and so it is also critical that the tools used in domains for software updates (yum and rpm) be trusted.</p>
+<h2 id="CooperativeCovertChannelsBetweenDomains">Cooperative Covert Channels Between Domains</h2>
+<p>Qubes does not attempt to eliminate all possible <em>cooperative</em> covert channels between domains, i.e. such channels that could be established between two <em>compromised</em> domains. We don't believe this is possible to achieve on x86 hardware, and we also doubt it makes any sense in practice for most users -- after all if the two domains are compromised, then it's already (almost) all lost anyway.</p>
