--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -30,7 +30,7 @@
 <li><a href="/wiki/wiki/TemplateImplementation">Implementation of template sharing and updating</a></li>
 </ul>
 <ul>
-<li><a href="/wiki/wiki/Dom0SecureUpdate%3A">Dom0 secure update mechanism</a></li>
+<li><a href="/wiki/wiki/Dom0SecureUpdates">Dom0 secure update mechanism</a></li>
 </ul>
 <p>Build instructions:</p>
 <ul>
