--- a/GUIdocs.html
+++ b/GUIdocs.html
@@ -180,8 +180,8 @@
 </tr>
 <tr class="odd">
 <td style="text-align: left;">MSG_CROSSING</td>
-<td style="text-align: left;">Obsolete</td>
-<td style="text-align: left;">Obsolete, unused</td>
+<td style="text-align: left;"><code> struct msg_crossing { </code> <br /> <code> uint32_t type; </code> <br /> <code> uint32_t x; </code> <br /> <code> uint32_t y; </code> <br /> <code> uint32_t state; </code> <br /> <code> uint32_t mode; </code> <br /> <code> uint32_t detail; </code> <br /> <code> uint32_t focus; </code> <br /> <code> }; </code></td>
+<td style="text-align: left;">Notify window about enter/leave event</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">MSG_FOCUS</td>
