--- a/StickMounting.html
+++ b/StickMounting.html
@@ -7,6 +7,7 @@
 </ol>
 <pre class="wiki"><code>xl block-attach &lt;vmname&gt; phy:/dev/sdb1 xvdi w</code></pre>
 <p>This assumes that your stick is seen by Dom0 kernel as <strong>/dev/sdb</strong> and you're mounting its first partition, so <strong>/dev/sdb1</strong> (the usual case); &quot;w&quot; means read/write, if you not want that, use &quot;r&quot; for read only.</p>
+<p>This will attach the device as &quot;/dev/xvdi&quot; in VM. You can also choose different name (eg. xvdj) to connect multiple devices, but the others (not xvdi) will require mounting from cmdline in VM...</p>
 <ol start="3">
 <li>Open Nautilus file manager in the AppVM. Your stick should be visible in the &quot;Places&quot; panel on the left. Just click on the device.</li>
 </ol>
