--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -34,7 +34,10 @@
 </ul>
 <p>Build instructions:</p>
 <ul>
-<li>Building Qubes core and gui packages: see this <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​message</a></li>
+<li>(outdated) Building Qubes core and gui packages: see this <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​message</a></li>
+</ul>
+<ul>
+<li><a href="/wiki/wiki/QubesBuilder">Building all Qubes packages</a></li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
