--- a/UserDoc.html
+++ b/UserDoc.html
@@ -16,6 +16,11 @@
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 </ul>
+<p>Command-line tools reference:</p>
+<ul>
+<li>Dom0 tools</li>
+<li>VM tools</li>
+</ul>
 <p>Optional topics:</p>
 <ul>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
