--- a/QubesResearch.html
+++ b/QubesResearch.html
@@ -15,3 +15,7 @@
 <ul>
 <li><a href="http://radlab.cs.berkeley.edu/wiki/Virtics">​Virtics: A System for Privilege Separation of Legacy Desktop Applications</a> by Matt Piotrowski <br />(We plan to implement some ideas from Matt's thesis in Qubes very soon -- stay tuned for details)</li>
 </ul>
+<h3 id="VMMXendisagregation">VMM/Xen disagregation</h3>
+<ul>
+<li>[<a href="http://tjd.phlegethon.org/words/sosp11-xoar.pdf">​http://tjd.phlegethon.org/words/sosp11-xoar.pdf</a> &quot;Breaking Up is Hard to Do: Security and Functionality in a Commodity Hypervisor] by Patrick Colp at el. <br /> (Also see <a href="http://www.gossamer-threads.com/lists/xen/devel/230011">​this thread on xen-devel</a>)</li>
+</ul>
