--- a/UserDoc.html
+++ b/UserDoc.html
@@ -9,6 +9,7 @@
 <li>Using Disposable VMs</li>
 <li><a href="/wiki/wiki/QubesFirewall">Using Qubes firewall</a></li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
+<li><a href="/wiki/wiki/AssigningDevices">How to assign full PCI/e device to a VM?</a></li>
 </ul>
 <p>Advanced topics:</p>
 <ul>
